Update locale: es-ES

--- a/extension/locale/es-ES/cookies.properties
+++ b/extension/locale/es-ES/cookies.properties
@@ -1,43 +1,138 @@
-extensions.firecookie@janodvarko.cz.description=Gestor de cookies para Firebug. Firebug debe estar instalado para usar esta extensión.
+# LOCALIZATION NOTE (cookies.Panel): Title of the panel in Firebug's UI.
 cookies.Panel=Cookies
+panel.tip.cookies=Permite inspeccionar y manipular las cookies
+# LOCALIZATION NOTE (cookies.Session): Label used to mark session cookies.
 cookies.Session=Sesión
+# LOCALIZATION NOTE (cookies.AllowGlobally, cookies.tip.AllowGlobally):
+# Label used for cookies permission.
 cookies.AllowGlobally=Aceptar cookies de sitios web
-cookies.BlockCurrent=Bloquear %S
-cookies.LogEvents=Mostrar logs en la consola
+cookies.tip.AllowGlobally=Aceptar / bloquear todas las cookies por defecto.
+# LOCALIZATION NOTE (cookies.LogEvents, cookies.tip.LogEvents):
+# Label used in Cookies panel options menu (the small arrow next to the Cookies panel label).
+# If checked, various cookies events are displayed in Firebug's Console panel.
+cookies.LogEvents=Mostrar registros en la consola
+cookies.tip.LogEvents=Se usar para mostrar los eventos (cambios, borrados) de las cookies en la Consola.
+# LOCALIZATION NOTE (cookies.clearWhenDeny): Label used in Cookies panel options menu (the
+# small arrow next to the Cookies panel label). If checked, cookies are automatically removed
+# if the permission is changed to deny.
+# xxxHonza: currently not displayed in the UI
 cookies.clearWhenDeny=Limpiar las cookies al rechazar
+# LOCALIZATION NOTE (cookies.Cut, cookies.Copy, cookies.CopyAll, cookies.Paste,
+# cookies.Delete): Support for clipboard actions. Used in a cookie context menu
+# (right click on a cookie in the Cookies panel).
 cookies.Cut=Cortar
 cookies.Copy=Copiar
 cookies.CopyAll=Copiar todo
 cookies.Paste=Pegar
 cookies.Delete=Eliminar
+# LOCALIZATION NOTE (cookies.Clear Value): Label for an item in the cookie context menu.
+# Clears cookie value, but not removes the cookie itself.
+cookies.Clear_Value=Eliminar valores
+# LOCALIZATION NOTE (cookies.Edit): Label for an item in the cookie context menu. Displays
+# a dialog for editing clicked cookie.
 cookies.Edit=Editar
 cookies.Accept=Aceptar
-cookies.header.Reset_Header=Restablecer Cabecera
-cookies.Intro=Puedes especificar qué sitios web pueden utilizar cookies siempre y cuáles nunca.\nEscribe la dirección exacta del sitio que quieres gestionar y pulsa en Bloquear,\nPermitir durante la Sesión, o Permitir.
+# LOCALIZATION NOTE (cookies.header.Reset_Header): Used in cookie header context menu (right
+# click on a header in the Cookies panel). This action restores default state of the header
+# (visibility and size of all columns)
+cookies.header.Reset_Header=Restablecer encabezado
+# LOCALIZATION NOTE (cookies.Intro, cookies.ExceptionsTitle): Used for managing Cookie panel
+# enablement. Used only if Firebug 1.2 and 1.3 is installed
+cookies.Intro=Puede especificar qué sitios web pueden utilizar cookies siempre y cuáles nunca.\nEscriba la dirección exacta del sitio que quiera gestionar y pulse en Bloquear,\nPermitir durante la sesión, o Permitir.
 cookies.ExceptionsTitle=Excepciones - Cookies
-cookies.confirm.removeall=¿Quieres eliminar todas las cookies de la lista?
+# LOCALIZATION NOTE (cookies.modulemanager.description, cookies.HostEnable, cookies.HostDisable,
+# cookies.Permissions, cookies.PermissionsIntro): Various labels used for mangaing Cookies panel
+# enablement. Used only if Firebug 1.2 and 1.3 is installed.
+# examples: Enable Cookies panel for www.softwareishard.com
+cookies.modulemanager.description=Ayuda para la Monitorización de cookies
+cookies.HostEnable=Activar panel de Cookies para %S
+cookies.HostDisable=Desactivar panel de Cookies para %S
+cookies.Permissions=Activar / Desactivar el panel de Cookies
+cookies.PermissionsIntro=Elegir en qué sitios web el panel de Cookies estará activado o desactivado.
+# LOCALIZATION NOTE (cookies.SystemPages, cookies.LocalFiles): Labels used in the Cookies
+# panel if it's disabled (only for Firebug 1.2 and 1.3).
+cookies.SystemPages=Páginas de sistema
+cookies.LocalFiles=Archivos Locales
+# LOCALIZATION NOTE (cookies.confirm.removeall): Used in a confirmation dialog when cookies
+# are going to be deleted deleted (or permission is set do deny and cookies should be deleted).
+cookies.confirm.removeall=¿Quiere eliminar todas las cookies de la lista?
+# LOCALIZATION NOTE (cookies.confirm.removeallsession): Used in a confirmation dialog when
+# all session cookies are going to be deleted
+cookies.confirm.removeallsession=¿Desea eliminar todas las cookies de sesión de la lista?
+# LOCALIZATION NOTE (cookies.msg.Do_not_show_this_message_again): 
+# Message within a confirmation dialog that is displayed when deleting cookies.
+# This message is displayed next to a check-box that can be used to disabled this
+# confirmation.
+cookies.msg.Do_not_show_this_message_again=No volver a mostrar este mensaje
+# LOCALIZATION NOTE (cookies.Confirm_cookie_removal): A label used for option (mini tab menu)
+# that says whether a confirmation dialog is displayed when removing cookies. 
+cookies.Confirm_cookie_removal=Confirmar eliminación de cookies
+cookies.tip.Confirm_cookie_removal=Si se selecciona se mostrará un diálogo de confirmación antes de borrar todas las cookies de la lista.
+# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Cookies menu
 cookies.removeall.tooltip=Eliminar todas las cookies de la lista.
+# LOCALIZATION NOTE (cookies.Remove_Session_Cookies): A label used for
+# Cookies->Remove Session Cookies menu
+cookies.Remove_Session_Cookies=Eliminar cookies de sesión
+# LOCALIZATION NOTE (cookies.removeall.tooltip): A tooltip for Cookies->Remove Session Cookies menu
+cookies.removeallsession.tooltip=Eliminar todas las cookies de la sesión de la lista
+# LOCALIZATION NOTE (cookies.createcookie.tooltip): A tooltip for Cookies->Create Cookie menu
+# examples: Create new cookie for www.softwareishard.com
 cookies.createcookie.tooltip=Crear nueva cookie para %S
+# LOCALIZATION NOTE (cookies.createcookie.defaultvalue): Default value for newly created cookie.
 cookies.createcookie.defaultvalue=Valor
+# LOCALIZATION NOTE (cookies.perm.manage.tooltip): A tooltip for permissions button that
+# is located on a Cookis panel toolbar.
+# examples: Manage cookie permissions for www.softwareishard.com
 cookies.perm.manage.tooltip=Gestionar permisos de cookies para %S
+# LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
+# displayed in Firebug's Console panel when all cookie in Firefox are removed
+# To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
+# Remove All Cookies in the dialog.
 cookies.console.cookiescleared=Todas las cookies han sido eliminadas.
+# LOCALIZATION NOTE (cookies.console.cookiescleared): A label for a cookie event that is
+# displayed in Firebug's Console panel when all cookie in Firefox are removed
+# To remove all cookies use menu on Cookis panel toolbar: Tools->Show All Cookies and click
+# Remove All Cookies in the dialog.
+cookies.console.sessioncookiescleared=Se han eliminado todas las cookies de la sesión.
+# LOCALIZATION NOTE (cookies.console.cookiesrejected, cookies.console.nocookiesreceived):
+# A label for a cookie event that is displayed in Firebug's Console panel when cookies are
+# rejected by the current site.
 cookies.console.cookiesrejected=Cookies rechazadas:
 cookies.console.nocookiesreceived=No se han recibido cookies
+# LOCALIZATION NOTE (cookies.console.cookie, cookies.console.deleted, cookies.console.added,
+# cookies.console.changed, cookies.console.cleared): Various labels that are used for cookie
+# events displayed in Firebug's Console panel.
 cookies.console.cookie=Cookie
 cookies.console.deleted=borrada
 cookies.console.added=añadida
 cookies.console.changed=cambiada
 cookies.console.cleared=limpiada
+# LOCALIZATION NOTE (cookies.domain.label): Label used for marking domain cookie.
+# Displayed in the Cookies panel for domain cookies.
+# xxxHonza: not used in the UI now.
 cookies.domain.label=Dominio
+# LOCALIZATION NOTE (cookies.secure.label): Label used for marking secure cookie.
+# Displayed in the Cookies panel for secure cookies.
 cookies.secure.label=Segura
+# LOCALIZATION NOTE (cookies.status.accepted, cookies.status.downgraded,
+# cookies.status.flagged, cookies.status.rejected): Various statuses of a cookie
+# displayed in Status column.
 cookies.status.accepted=Aceptada
 cookies.status.downgraded=Revertida
 cookies.status.flagged=Marcada
 cookies.status.rejected=Rechazada
+# LOCALIZATION NOTE (cookies.info.valuetab.label, cookies.info.rawdatatab.Raw_Data,
+# cookies.info.jsontab.JSON, cookies.info.xmltab.XML): A label for tabs displayed
+# if a cookie entry is expanded. Tab are only available in the UI, if necessary.
 cookies.info.valuetab.label=Valor
-cookies.info.rawdatatab.Raw_Data=Datos Brutos
+cookies.info.rawdatatab.Raw_Data=Datos sin tratar
 cookies.info.jsontab.JSON=JSON
 cookies.info.xmltab.XML=XML
+# LOCALIZATION NOTE (cookies.default.session, cookies.default.thirdPartySession,
+# cookies.default.thirdParty, cookies.default.allow, cookies.default.deny,
+# cookies.default.warn, cookies.host.session, cookies.host.accept,
+# cookies.host.reject): Various labels for cookie permissions.
+# examples: Accept cookies from www.softwareishard.com
 cookies.default.session=Por defecto (Aceptar cookies de sesión)
 cookies.default.thirdPartySession=Por defecto (Aceptar cookies de sesión)
 cookies.default.thirdParty=Por defecto (Aceptar cookies)
@@ -47,8 +142,16 @@ cookies.default.warn=Por defecto (Avisar antes de aceptar una cookie)
 cookies.host.session=Aceptar cookies de sesión de %S
 cookies.host.accept=Aceptar cookies de %S
 cookies.host.reject=Rechazar cookies de %S
-cookies.error.invalidName=El nombre de la cookie no es válido.
-cookies.error.invalidURI=La URI del servidor no es válida.
+# LOCALIZATION NOTE (cookies.edit.invalidname, cookies.edit.invalidhost,
+# cookies.edit.invalidpath): Various error messages used when a new cookie is created
+# using a cookie dialog. Use Cookies->Create Cookie menu to show the dialog.
+cookies.edit.invalidname=Nombre de la cookie no válido.
+cookies.edit.invalidhost=Servidor de la cookie no válido.
+cookies.edit.invalidpath=Ruta de la cookie no válida.
+# LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.domain,
+# cookies.header.size, cookies.header.path, cookies.header.expires,
+# cookies.header.security, cookies.header.status, cookies.header.httponly):
+# Column labels used in the cookie header.
 cookies.header.name=Nombre
 cookies.header.value=Valor
 cookies.header.domain=Dominio
@@ -58,59 +161,106 @@ cookies.header.expires=Expira
 cookies.header.security=Seguridad
 cookies.header.status=Estado
 cookies.header.httponly=HttpOnly
-cookies.header.name.tooltip=Nombre
-cookies.header.value.tooltip=Valor
-cookies.header.domain.tooltip=Dominio
-cookies.header.size.tooltip=Tamaño
-cookies.header.path.tooltip=Ruta
-cookies.header.expires.tooltip=Expira
-cookies.header.security.tooltip=Seguridad
-cookies.header.status.tooltip=Estado
+# LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
+# cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
+# cookies.header.expires.tooltip, cookies.header.security.tooltip,
+# cookies.header.status.tooltip, cookies.header.httponly.tooltip):
+# Column tooltips used in the cookie header.
+cookies.header.name.tooltip=Nombre de la cookie
+cookies.header.value.tooltip=Valor guardado de la cookie
+cookies.header.domain.tooltip=Dominio que ha almacenado la cookie
+cookies.header.size.tooltip=Tamaño de la cookie almacenada
+cookies.header.path.tooltip=Ruta de la carpeta donde está activa la cookie
+cookies.header.expires.tooltip=Fecha de expiración de la cookie
+cookies.header.security.tooltip=Muestra si es una cookie segura o no
+cookies.header.status.tooltip=Estado de la cookie (marcada, revertida, etc)
 cookies.header.httponly.tooltip=Muestra si la cookie es sólo HTTP
-cookies.modulemanager.description=Apoyo para la Monitorización de Cookies
-cookies.HostEnable=Habilitar panel de Cookies para %S
-cookies.HostDisable=Deshabilitar panel de Cookies para %S
-cookies.Permissions=Habilitar o Deshabilitar panel de Cookies
-cookies.PermissionsIntro=Elige sitios web donde el panel de Cookies estará habilitado o deshabilitado.
-cookies.edit.invalidname=El nombre de la cookie no es válido.
-cookies.edit.invalidhost=El host de la cookie no es válido.
-cookies.edit.invalidpath=La ruta de la cookie no es válida.
-cookies.SystemPages=Páginas de Sistema
-cookies.LocalFiles=Archivos Locales
-cookies.netinfo.Received_Cookies=Cookies Recibidas
-cookies.netinfo.Sent_Cookies=Cookies Enviadas
-cookies.Path_Filter=Filtro por Ruta
+# LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
+# Labels used in the Firebug's net panel. If there are any cookies associated with a network
+# request, there is an additional Cookies tab displayed when the user expands the request.
+# These labels are used within this tab.
+cookies.netinfo.Received_Cookies=Cookies recibidas
+cookies.netinfo.Sent_Cookies=Cookies enviadas
+# LOCALIZATION NOTE (cookies.Path_Filter): Label for a Filter->Path Filter
+# xxxHonza: Not implemented yet.
+cookies.Path_Filter=Filtro por ruta
+# LOCALIZATION NOTE (cookies.menu.Cookies): Label for menu Cookies, dislayed on the toolbar.
 cookies.menu.Cookies=Cookies
-cookies.export.Export_All_Cookies=Exportar todas las Cookies...
-cookies.export.Export_All_Cookies_Tooltip=Exportar todas las cookies del navegador a archivo cookies.txt
-cookies.export.Export_For_Site=Exportar Cookies Para Este Sitio...
-cookies.export.Export_For_Site_Tooltip=Exportar cookies para %S a archivo cookies.txt
+# LOCALIZATION NOTE (cookies.export.Export_All_Cookies, cookies.export.Export_All_Cookies_Tooltip,
+# cookies.export.Export_For_Site, cookies.export.Export_For_Site_Tooltip): Labels and 
+# tooltips for exporting menus available under Cookies menus.
+cookies.export.Export_All_Cookies=Exportar todas las cookies
+cookies.export.Export_All_Cookies_Tooltip=Exportar todas las cookies del navegador al archivo cookies.txt
+cookies.export.Export_For_Site=Exportar cookies Para Este Sitio
+cookies.export.Export_For_Site_Tooltip=Exportar cookies de %S al archivo cookies.txt
+# LOCALIZATION NOTE (cookies.message.There_is_no_active_page): An error message displayed
+# when the user is trying to create a cookie and there is no active page (site). This should
+# never happen.
 cookies.message.There_is_no_active_page=No hay página activa.
-cookies.RemoveAll=Eliminar para este sitio
-cookies.Create=Crear Cookie
-cookies.ViewAll=Mostrar todas las Cookies...
-cookies.ViewAllTooltip=Abrir Gestor de Cookies
-cookies.ViewExceptions=Permisos para sitios web
-cookies.ViewExceptionsTooltip=Lista de los sitios web permitidos o prohibidos
+# LOCALIZATION NOTE (cookies.Break_On_Cookie, cookies.Disable_Break_On_Cookie):
+# Tooltips for resume button that are used when the Cookies panel is currently selected.
+# The button allows stopping JS execution when a cookie on the current page is modified
+# added or removed.
+cookies.Break_On_Cookie=Parar cuando cambie una cookie
+cookies.Disable_Break_On_Cookie=Desactivar parar cuando cambie una cookie
+# LOCALIZATION NOTE (cookies.Cookie_Breakpoints): Name of Cookie breakpoint group
+# displayed in Breakpoints panel (in the Script panel)
+cookies.Cookie_Breakpoints=Paradas de cookies
+# LOCALIZATION NOTE (cookies.Break_On_Cookie, cookies.menu.tooltip.Break_On_Cookie):
+# Label and tooltip for a context menu item used when the user right clicks on a cookie. 
+# examples: Break on 'MyCookie' cookie
+# examples: Break on 'MyCookie' when removed or changed.
+cookies.menu.Break_On_Cookie=Parar con la cookie '%S'
+cookies.menu.tooltip.Break_On_Cookie=Parar cuando se borre o cambie '%S'
+# LOCALIZATION NOTE (cookies.menu.Edit_Breakpoint_Condition): Label for context menu item
+# used when user right clicks on a cookie with existing breakpoint.
+cookies.menu.Edit_Breakpoint_Condition=Editar condiciones de parada
+# LOCALIZATION NOTE (cookies.Breakpoint_condition_evaluation_fails): Message displayed
+# within the Firebug Console panel if a cookie breakpoint condition fails when evaluated. 
+cookies.Breakpoint_condition_evaluation_fails=La evaluación de la condición de parada ha fallado
+# DTD strings converted (main Firecokie UI, see cookiePanel.xul)
+cookies.RemoveAll=Eliminar cookies
+cookies.Create=Crear cookie
+# LOCALIZATION NOTE (cookies.Tools, cookies.ToolsTooltip) Label and tooltip for Tools
+# menu on Cookies toolbar.
 cookies.Tools=Herramientas
 cookies.ToolsTooltip=Herramientas
-cookies.Help=Ayuda
-cookies.HelpTooltip=Ayuda de Firecookie
-cookies.About=Acerca de...
-cookies.AboutTooltip=Acerca de Firecookie
-cookies.edit.title=Editar Cookie
-cookies.edit.group.title=Detalles de la Cookie
+# LOCALIZATION NOTE (cookies.ViewAll, cookies.ViewAllTooltip) Label and tooltip for
+# view all cookies menu item (Tools menu). This action opens Firefox built-in cookie manager window.
+cookies.ViewAll=Mostrar todas las cookies
+cookies.ViewAllTooltip=Abrir Administrador de cookies
+# LOCALIZATION NOTE (cookies.ViewExceptions, cookies.ViewExceptionsTooltip) Label and
+# tooltip for Site Permissions menu item (Tools menu). This action opens Firefox built-in
+# dialog for setting web site cookie permissions.
+cookies.ViewExceptions=Permisos para sitios web
+cookies.ViewExceptionsTooltip=Ver la lista de los sitios web permitidos o prohibidos
+# LOCALIZATION NOTE (cookies.Filter, cookies.FilterTooltip, cookies.filter.byPath,
+# cookies.filter.byPathTooltip, cookies.filter.showRejectedCookies,
+# cookies.filter.showRejectedCookiesTooltip): Labels and tooltips for cookie Filter menu
+# presented on the Cookie toolbar.
+cookies.Filter=Filtro
+cookies.FilterTooltip=Use estas opciones para filtrar la lista de cookies
+cookies.filter.byPath=Filtrar cookies por ruta actual
+cookies.filter.byPathTooltip=Mostrar sólo las cookies que coincidan con la ruta actual
+cookies.filter.showRejectedCookies=Mostrar cookies rechazadas
+cookies.filter.showRejectedCookiesTooltip=Mostrar en la lista también las cookies rechazadas
+# LOCALIZATION NOTE (cookies.edit.title, cookies.edit.name.label,
+# cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
+# cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
+# cookies.edit.session.label): Edit Cookie dialog UI
+cookies.edit.title=Editar cookie
 cookies.edit.name.label=Nombre:
-cookies.edit.value.label=Valor:
 cookies.edit.domain.label=Servidor:
 cookies.edit.path.label=Ruta:
 cookies.edit.expire.label=Expira:
-cookies.edit.session.label=Sesión
+cookies.edit.value.label=Valor:
 cookies.edit.secure.label=Cookie segura
-cookies.edit.httponly.label=HTTP Only
-cookies.Filter=Filtro
-cookies.FilterTooltip=Usa estas opciones para filtrar la lista de cookies
-cookies.filter.byPath=Filtrar Cookies por Ruta
-cookies.filter.byPathTooltip=Mostrar sólo las cookies que coincidan con la ruta actual
-cookies.filter.showRejectedCookies=Mostrar Cookies Rechazadas
-cookies.filter.showRejectedCookiesTooltip=Mostrar en la lista también las cookies rechazadas
+cookies.edit.httponly.label=Sólo HTTP
+cookies.edit.session.label=Sesión
+# LOCALIZATION NOTE (cookies.console.Cookies, cookies.console.Filter_By_Cookies)
+# Label and tooltip for a toolbar button displayed on the Console panel. Used for filtering.
+cookies.console.Cookies=Cookies
+cookies.console.Filter_By_Cookies=Filtrar por cookies
+# LOCALIZATION NOTE (firebug.shortcut.removeAllCookies.label) Label used by the
+# Customize Shortcuts dialog (Firebug menu)
+firebug.shortcut.removeAllCookies.label=Eliminar todas las cookies
