--- a/extension/locale/es-ES/firebug-tracing.properties
+++ b/extension/locale/es-ES/firebug-tracing.properties
@@ -28,7 +28,7 @@ tracing.cmd.tip.Exit=Salir de Firefox
 tracing.cmd.Save=Guardar en archivo
 tracing.cmd.tip.Save=Guardar registros en un archivo
 tracing.cmd.Load=Cargar desde archivo
-tracing.cmd.tip.Load=Cargar registros desde un archivo
+tracing.cmd.tip.Load=Cargar registros desde archivo
 tracing.cmd.Expand_All=Expandir todo
 tracing.cmd.Collapse_All=Contraer todo
 tracing.cmd.Tools=Herramientas
@@ -36,39 +36,39 @@ tracing.cmd.tip.Tools=Herramientas
 tracing.cmd.Clear_Browser_Cache=Limpiar caché del navegador
 tracing.cmd.tip.Clear_Browser_Cache=Limpiar caché del navegador
 tracing.cmd.Force_Garbage_Collector=Forzar recolector de basura
-tracing.cmd.tip.Force_Garbage_Collector=Forzar recolector de basura
-tracing.cmd.Open_Profile_Directory=Abrir directorio del perfil
-tracing.cmd.tip.Open_Profile_Directory=Abrir directorio del perfil
-tracing.option.A11Y_Description=Incidencias de accesibilidad
+tracing.cmd.tip.Force_Garbage_Collector=Forzar el recolector de basura
+tracing.cmd.Open_Profile_Directory=Abrir directorio de análisis
+tracing.cmd.tip.Open_Profile_Directory=Abrir directorio de análisis
+tracing.option.A11Y_Description=Problemas de accesibilidad
 tracing.option.ACTIVATION_Description=Activación de Firebug
 tracing.option.ACTIVITYOBSERVER_Description=Observador de actividad de Firebug
 tracing.option.ANNOTATIONS_Description=Anotación de sitio web de Firebug
 tracing.option.BP_Description=Paradas
 tracing.option.CACHE_Description=Caché de fuente
-tracing.option.COMMANDLINE_Description=Línea de comandos y Linea de comandos emergente
+tracing.option.COMMANDLINE_Description=Línea de comandos y Línea de comandos emergente
 tracing.option.COMPILATION_UNITS_Description=Unidades de compilación de script
 tracing.option.CONSOLE_Description=Panel de consola
-tracing.option.CSS_Description=Procesado CSS
+tracing.option.CSS_Description=Procesador CSS
 tracing.option.DISPATCH_Description=Despachador de eventos
 tracing.option.DOM_Description=DOM
-tracing.option.DOMPLATE_Description=Creación domplate
+tracing.option.DOMPLATE_Description=Creación de domplate
 tracing.option.EDITOR_Description=Editor en linea & Autocompletador
 tracing.option.ERRORLOG_Description=Registro de errores JS, CSS, XML, etc.
 tracing.option.ERRORS_Description=Errores internos de Firebug
 tracing.option.EVAL_Description=Evaluación de script
-tracing.option.FBS_BP_Description=Puntos de ruptura de servicios de Firebug
+tracing.option.FBS_BP_Description=Paradas de servicios de Firebug
 tracing.option.FBS_CREATION_Description=Servicio de creación de scripts de Firebug
 tracing.option.FBS_ERRORS_Description=Errores de servicio de Firebug
-tracing.option.FBS_FINDDEBUGGER_Description=Servicio de Firebug buscar depurador
+tracing.option.FBS_FINDDEBUGGER_Description=Servicio de Firebug de búsqueda de depurador
 tracing.option.FBS_FUNCTION_Description=Función de servicio de Firebug
 tracing.option.FBS_JSDCONTEXT_Description=Servicio de Firebug de contexto de depurador JavaScript
 tracing.option.FBS_SRCUNITS_Description=Servicio de Firebug de unidades fuente
-tracing.option.FBS_STEP_Description=Servicio de Firebug de etapas de depurador JavaScript
+tracing.option.FBS_STEP_Description=Servicio de Firebug de pasos de depurador JavaScript
 tracing.option.FBS_TRACKFILES_Description=Servicio de Firebug de archivos monitorizados
 tracing.option.FUNCTION_NAMES_Description=Nombres de función JavaScript
 tracing.option.HISTORY_Description=Historial de navegación de Firebug
 tracing.option.HTML_Description=HTML
-tracing.option.HTTPOBSERVER_Description=Observador de petición HTTP
+tracing.option.HTTPOBSERVER_Description=Observador de solicitud HTTP
 tracing.option.INFOTIP_Description=Consejo
 tracing.option.INITIALIZE_Description=Inicialización de Firebug
 tracing.option.INSPECT_Description=Inspector
@@ -82,7 +82,7 @@ tracing.option.OPTIONS_Description=Preferencias de Firebug
 tracing.option.PANELS_Description=Paneles
 tracing.option.SHORTCUTS_Description=Atajos de teclado
 tracing.option.SOURCEFILES_Description=Archivos fuente de JavaScript
-tracing.option.SPY_Description=Observador XMLHttpRequests
+tracing.option.SPY_Description=Observador de XMLHttpRequests
 tracing.option.STACK_Description=Pila de llamadas JavaScript
 tracing.option.STORAGE_Description=Preferencias de almacenamiento
 tracing.option.SVGVIEWER_Description=Visor SVG
