Issue 5600 (Remove status column of Cookies panel) http://code.google.com/p/fbug/issues/detail?id=5600

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -192,13 +192,12 @@ cookies.header.size=Size
 cookies.header.path=Path
 cookies.header.expires=Expires
 cookies.header.security=Security
-cookies.header.status=Status
 cookies.header.httponly=HttpOnly
 
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
 # cookies.header.rawValue.tooltip, cookies.header.domain.tooltip, cookies.header.size.tooltip,
 # cookies.header.path.tooltip, cookies.header.expires.tooltip, cookies.header.security.tooltip,
-# cookies.header.status.tooltip, cookies.header.httponly.tooltip):
+# cookies.header.httponly.tooltip):
 # Column tooltips used in the cookie header.
 cookies.header.name.tooltip=Name of the cookie
 cookies.header.value.tooltip=Value stored for the cookie
@@ -208,7 +207,6 @@ cookies.header.size.tooltip=Size of the stored cookie
 cookies.header.path.tooltip=Directory where the cookie is active
 cookies.header.expires.tooltip=Expiration date for the cookie
 cookies.header.security.tooltip=Shows whether it is a secure cookie or not
-cookies.header.status.tooltip=Status of the cookie (downgraded, flagged, etc.)
 cookies.header.httponly.tooltip=Shows if the cookie is an HTTP only cookie
 
 # LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
