Issue 5608 (URL encoding of cookies value) http://code.google.com/p/fbug/issues/detail?id=5608

--- a/extension/locale/en-US/cookies.properties
+++ b/extension/locale/en-US/cookies.properties
@@ -296,7 +296,7 @@ cookies.filter.showRejectedCookiesTooltip=Display even rejected cookies in the l
 # LOCALIZATION NOTE (cookies.edit.title, cookies.edit.name.label,
 # cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
 # cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
-# cookies.edit.session.label): Edit Cookie dialog UI
+# cookies.edit.session.label, cookies.edit.urlEncode.label): Edit Cookie dialog UI
 cookies.edit.title=Edit Cookie
 cookies.edit.name.label=Name:
 cookies.edit.domain.label=Host:
@@ -306,6 +306,7 @@ cookies.edit.value.label=Value:
 cookies.edit.secure.label=Secure Cookie
 cookies.edit.httponly.label=HTTP Only
 cookies.edit.session.label=Session
+cookies.edit.urlEncode.label=URL encode value
 
 # LOCALIZATION NOTE (cookies.console.Cookies, cookies.console.Filter_By_Cookies)
 # Label and tooltip for a toolbar button displayed on the Console panel. Used for filtering.
