Issue 5615: 	Calling console API functions without parameters generates garbage

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1614,3 +1614,11 @@ firebug.Memory_Profiler_Results=Memory Profiler Results
 # LOCALIZATION NOTE (firebug.Entire_Session):
 # Label used within memory profiler results to mark summary information for entire session.
 firebug.Entire_Session=Entire Session
+
+# LOCALIZATION NOTE (console.msg.nothing_to_output):
+# Used by the console panel if a Console API is used without any argument.
+console.msg.nothing_to_output=(nothing to output)
+
+# LOCALIZATION NOTE (console.msg.nothing_to_output):
+# Used by the console panel if an empty string is passed into a Console API.
+console.msg.an_empty_string=(an empty string)
