Locale update: ru

--- a/extension/locale/ru/cookies.properties
+++ b/extension/locale/ru/cookies.properties
@@ -148,32 +148,32 @@ cookies.host.reject=Отвергать Cookie от %S
 cookies.edit.invalidname=Ошибочное имя Cookie.
 cookies.edit.invalidhost=Ошибочный хост Cookie.
 cookies.edit.invalidpath=Ошибочный путь Cookie.
-# LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.domain,
-# cookies.header.size, cookies.header.path, cookies.header.expires,
+# LOCALIZATION NOTE (cookies.header.name, cookies.header.value, cookies.header.rawValue,
+# cookies.header.domain, cookies.header.size, cookies.header.path, cookies.header.expires,
 # cookies.header.security, cookies.header.status, cookies.header.httponly):
 # Column labels used in the cookie header.
 cookies.header.name=Имя
 cookies.header.value=Значение
+cookies.header.rawValue=Исходное значение
 cookies.header.domain=Домен
 cookies.header.size=Размер
 cookies.header.path=Путь
 cookies.header.expires=Истекает
 cookies.header.security=Безопасность
-cookies.header.status=Статус
 cookies.header.httponly=Только HTTP
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
-# cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
-# cookies.header.expires.tooltip, cookies.header.security.tooltip,
-# cookies.header.status.tooltip, cookies.header.httponly.tooltip):
+# cookies.header.rawValue.tooltip, cookies.header.domain.tooltip, cookies.header.size.tooltip,
+# cookies.header.path.tooltip, cookies.header.expires.tooltip, cookies.header.security.tooltip,
+# cookies.header.httponly.tooltip):
 # Column tooltips used in the cookie header.
 cookies.header.name.tooltip=Имя Cookie
 cookies.header.value.tooltip=Сохранённое значение Cookie
+cookies.header.rawValue.tooltip=Исходное значение сохраненное в cookie
 cookies.header.domain.tooltip=Домен на котором хранится Cookie
 cookies.header.size.tooltip=Размер сохранённой Cookie
 cookies.header.path.tooltip=Директория в которой Cookie активна
 cookies.header.expires.tooltip=Дата истечения Cookie
 cookies.header.security.tooltip=Показывает безопасна Cookie или нет
-cookies.header.status.tooltip=Статус Cookie (понижена, помечена...)
 cookies.header.httponly.tooltip=Показывает если это только HTTP Cookie
 # LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
 # Labels used in the Firebug's net panel. If there are any cookies associated with a network
@@ -247,7 +247,7 @@ cookies.filter.showRejectedCookiesTooltip=Показывать даже отве
 # LOCALIZATION NOTE (cookies.edit.title, cookies.edit.name.label,
 # cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
 # cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
-# cookies.edit.session.label): Edit Cookie dialog UI
+# cookies.edit.session.label, cookies.edit.urlEncode.label): Edit Cookie dialog UI
 cookies.edit.title=Редактировать Cookie
 cookies.edit.name.label=Имя:
 cookies.edit.domain.label=Хост:
@@ -257,6 +257,7 @@ cookies.edit.value.label=Значение:
 cookies.edit.secure.label=Безопасная Cookie
 cookies.edit.httponly.label=Только HTTP
 cookies.edit.session.label=Сессия
+cookies.edit.urlEncode.label=URL encode значение
 # LOCALIZATION NOTE (cookies.console.Cookies, cookies.console.Filter_By_Cookies)
 # Label and tooltip for a toolbar button displayed on the Console panel. Used for filtering.
 cookies.console.Cookies=Cookies
