--- a/extension/locale/ru/firebug.properties
+++ b/extension/locale/ru/firebug.properties
@@ -40,11 +40,15 @@ firebug.AttachFirebug=Прикрепить Firebug к окну браузера
 pluralRule=1
 # LOCALIZATION NOTE (plural.Total_Firebugs2): Semicolon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-# Used in a tooltip that is displayed for the Firebug icon located within Firefox status bar.
+# Used in a tooltip that is displayed for the Firebug icon located within Firefox toolbar.
 # Displays the number of pages with Firebug activated.
 # %1 = number of Firebug instances activated
 # example: 2 Total Firebugs
 plural.Total_Firebugs2=%1$S Firebug;Всего %1$S Firebug\'ов
+# LOCALIZATION NOTE (startbutton.tip.deactivated):
+# Used in a tooltip that is displayed for the Firebug icon located within Firefox toolbar.
+# Displays the deactivated status of Firebug
+startbutton.tip.deactivated=Отключен
 # LOCALIZATION NOTE (panel.status): Label showing the status of an activable panel
 # inside a tooltip when hovering the Start Button. Will be shown for each panel.
 # first %S = panel name
@@ -159,8 +163,6 @@ html.option.Show_Entities_As_Names=Показывать сущности в ви
 html.option.tip.Show_Entities_As_Names=Показывать все XML-сущности в виде имён
 html.option.Show_Entities_As_Unicode=Показывать сущности в виде Юникода
 html.option.tip.Show_Entities_As_Unicode=Показывать все XML-сущности в виде Юникода
-ShowTextNodesWithEntities=Показывать базовые объекты
-html.option.tip.Show_Text_Nodes_With_Entities=Показывать часто используемые спец-символы в виде сущностей
 # LOCALIZATION NOTE (html.option.Highlight_Mutations, html.option.tip.Highlight_Mutations):
 # HTML panel option (located in tab's option menu). If set to true, changes to the nodes
 # will be highlighted
@@ -258,6 +260,8 @@ css.EmptyStyleSheet=Правила отсутствуют. Вы можете <a>
 css.EmptyElementCSS=Для данного элемента правила отсутствуют. Вы можете <a>создать правило</a> для него.
 EditStyle=Редактировать стиль элемента...
 style.tip.Edit_Style=Редактировать inline-стиль элемента
+AddRule=Добавить правило…
+css.tip.AddRule=Добавить правило к данному элементу
 NewRule=Новое правило...
 css.tip.New_Rule=Добавить новое правило
 # LOCALIZATION NOTE (css.Delete_Rule, css.tip.Delete_Rule): Menu item label used in the CSS panel context menu.
@@ -580,6 +584,10 @@ RequestHeaders=Заголовки запроса
 ResponseHeaders=Заголовки ответа
 CachedResponseHeaders=Заголовки ответа из кэша
 PostRequestHeaders=Запрос заголовков из потока загрузки
+# LOCALIZATION NOTE (net.label.ResponseHeadersFromBFCache):
+# Label (noun) used in the Net panel and displayed instead of Response Headers
+# if the response comes directly from the cache (BFCache).
+net.label.ResponseHeadersFromBFCache=Данные запроса были получены из кэша, мы не получили ответа от сервера. Ниже отображён кэшированный ответ.
 # LOCALIZATION NOTE (plural.Limit_Exceeded2): Semicolon list of plural forms.
 # A message displayed in the Net panel when some entries must be removed in the case the maximum number
 # of entries has been reached.
@@ -794,8 +802,8 @@ css.tip.Copy_Color=Копировать цвет в буфер обмена
 # Allow copying the URL of an image to the clipboard and opening it in a new browser tab
 CopyImageLocation=Копировать адрес картинки
 css.tip.Copy_Image_Location=Копировать URL изображения в буфер обмена
-OpenImageInNewTab=Открыть картинку в новой закладке
-css.tip.Open_Image_In_New_Tab=Открыть изображение в новой вкладке
+OpenImageInNewTab=Открыть изображение в новой вкладке
+css.tip.Open_Image_In_New_Tab=Открывает изображение в новой вкладке
 # LOCALIZATION NOTE (callstack.option.Omit_Object_Path_Stack, callstack.option.tip.Omit_Object_Path_Stack):
 # Stack side panel option (located in tab's option menu). If set to true,
 # the object path stack won't be displayed.
@@ -1383,3 +1391,9 @@ firebug.Memory_Profiler_Results=Результаты работы профайл
 # LOCALIZATION NOTE (firebug.Entire_Session):
 # Label used within memory profiler results to mark summary information for entire session.
 firebug.Entire_Session=Вся сессия
+# LOCALIZATION NOTE (console.msg.nothing_to_output):
+# Used by the console panel if a Console API is used without any argument.
+console.msg.nothing_to_output=(выводить нечего)
+# LOCALIZATION NOTE (console.msg.nothing_to_output):
+# Used by the console panel if an empty string is passed into a Console API.
+console.msg.an_empty_string=(пустая строка)
