Locale update: de

--- a/extension/locale/de/cookies.properties
+++ b/extension/locale/de/cookies.properties
@@ -154,12 +154,12 @@ cookies.edit.invalidpath=Cookie path is not valid.
 # cookies.header.security, cookies.header.status, cookies.header.httponly):
 cookies.header.name=Name
 cookies.header.value=Wert
+cookies.header.rawValue=Originalwert
 cookies.header.domain=Domain
 cookies.header.size=Größe
 cookies.header.path=Pfad
 cookies.header.expires=Verfallsdatum
 cookies.header.security=Sicherheit
-cookies.header.status=Status
 cookies.header.httponly=HttpOnly
 # Column labels used in the cookie header.
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
@@ -168,12 +168,12 @@ cookies.header.httponly=HttpOnly
 # cookies.header.status.tooltip, cookies.header.httponly.tooltip):
 cookies.header.name.tooltip=Name
 cookies.header.value.tooltip=Wert
+cookies.header.rawValue.tooltip=Originalwert, der im Cookie gespeichert wurde
 cookies.header.domain.tooltip=Domain
 cookies.header.size.tooltip=Größe
 cookies.header.path.tooltip=Pfad
 cookies.header.expires.tooltip=Verfallsdatum
 cookies.header.security.tooltip=Sicherheit
-cookies.header.status.tooltip=Status
 cookies.header.httponly.tooltip=Shows if the cookie is an HTTP only cookie
 # Column tooltips used in the cookie header.
 # LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
@@ -257,6 +257,7 @@ cookies.edit.value.label=Wert:
 cookies.edit.secure.label=Cookie schützen
 cookies.edit.httponly.label=HTTP Only
 cookies.edit.session.label=Sitzung
+cookies.edit.urlEncode.label=Wert URL-kodieren
 # cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
 # cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
 cookies.console.Cookies=Cookies
