--- a/extension/locale/de/firebug.properties
+++ b/extension/locale/de/firebug.properties
@@ -40,11 +40,15 @@ firebug.AttachFirebug=Firebug an Browser-Fenster anheften
 pluralRule=1
 # LOCALIZATION NOTE (plural.Total_Firebugs2): Semicolon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-# Used in a tooltip that is displayed for the Firebug icon located within Firefox status bar.
+# Used in a tooltip that is displayed for the Firebug icon located within Firefox toolbar.
 # Displays the number of pages with Firebug activated.
 # %1 = number of Firebug instances activated
 # example: 2 Total Firebugs
 plural.Total_Firebugs2=%1$S Firebug insgesamt;%1$S Firebugs insgesamt
+# LOCALIZATION NOTE (startbutton.tip.deactivated):
+# Used in a tooltip that is displayed for the Firebug icon located within Firefox toolbar.
+# Displays the deactivated status of Firebug
+startbutton.tip.deactivated=Deaktiviert
 # LOCALIZATION NOTE (panel.status): Label showing the status of an activable panel
 # inside a tooltip when hovering the Start Button. Will be shown for each panel.
 # first %S = panel name
@@ -159,8 +163,6 @@ html.option.Show_Entities_As_Names=Entitäten als Namen anzeigen
 html.option.tip.Show_Entities_As_Names=Zeigt alle XML Entitäten als Namen
 html.option.Show_Entities_As_Unicode=Entitäten als Unicode anzeigen
 html.option.tip.Show_Entities_As_Unicode=Zeigt alle XML Entitäten in ihrer Unicode Darstellung
-ShowTextNodesWithEntities=Basisentitäten anzeigen
-html.option.tip.Show_Text_Nodes_With_Entities=Die häufigsten speziellen Zeichen in ihrer Entitätendarstellung anzeigen
 # LOCALIZATION NOTE (html.option.Highlight_Mutations, html.option.tip.Highlight_Mutations):
 # HTML panel option (located in tab's option menu). If set to true, changes to the nodes
 # will be highlighted
@@ -258,6 +260,8 @@ css.EmptyStyleSheet=Es wurden keine Style-Regeln definiert. Sie können <a>eine 
 css.EmptyElementCSS=Dieses Element hat keine Style-Regeln. Sie können <a>eine Regel für es erstellen</a>.
 EditStyle=Element-Style bearbeiten...
 style.tip.Edit_Style=Den Inline-Style dieses Elements bearbeiten
+AddRule=Regel hinzufügen…
+css.tip.AddRule=Eine allgemeine Regel zu diesem Element hinzufügen
 NewRule=Neue Regel...
 css.tip.New_Rule=Eine neue Regel hinzufügen
 # LOCALIZATION NOTE (css.Delete_Rule, css.tip.Delete_Rule): Menu item label used in the CSS panel context menu.
@@ -580,6 +584,10 @@ RequestHeaders=Anfrage-Header
 ResponseHeaders=Antwort-Header
 CachedResponseHeaders=Antwort-Header aus dem Cache
 PostRequestHeaders=Anfrageheader des Uploadstreams
+# LOCALIZATION NOTE (net.label.ResponseHeadersFromBFCache):
+# Label (noun) used in the Net panel and displayed instead of Response Headers
+# if the response comes directly from the cache (BFCache).
+net.label.ResponseHeadersFromBFCache=Die Anfrage wurde direkt über den Cache abgewickelt, daher gibt es keine Antwort vom Server. Siehe unten für die zwischengespeicherte Antwort.
 # LOCALIZATION NOTE (plural.Limit_Exceeded2): Semicolon list of plural forms.
 # A message displayed in the Net panel when some entries must be removed in the case the maximum number
 # of entries has been reached.
@@ -1383,3 +1391,9 @@ firebug.Memory_Profiler_Results=Speicher Profiler Ergebnisse
 # LOCALIZATION NOTE (firebug.Entire_Session):
 # Label used within memory profiler results to mark summary information for entire session.
 firebug.Entire_Session=Gesamte Sitzung
+# LOCALIZATION NOTE (console.msg.nothing_to_output):
+# Used by the console panel if a Console API is used without any argument.
+console.msg.nothing_to_output=(keine Ausgabe)
+# LOCALIZATION NOTE (console.msg.nothing_to_output):
+# Used by the console panel if an empty string is passed into a Console API.
+console.msg.an_empty_string=(Leerstring)
