Locale update: pl

--- a/extension/locale/pl/cookies.properties
+++ b/extension/locale/pl/cookies.properties
@@ -154,12 +154,12 @@ cookies.edit.invalidpath=Ścieżka ciasteczka jest nieprawidłowa.
 # Column labels used in the cookie header.
 cookies.header.name=Nazwa
 cookies.header.value=Zawartość
+cookies.header.rawValue=Zawartość RAW
 cookies.header.domain=Domena
 cookies.header.size=Wielkość
 cookies.header.path=Ścieżka
 cookies.header.expires=Wygasa
 cookies.header.security=Bezpieczeństwo
-cookies.header.status=Status
 cookies.header.httponly=Tylko HTTP
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
 # cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
@@ -168,12 +168,12 @@ cookies.header.httponly=Tylko HTTP
 # Column tooltips used in the cookie header.
 cookies.header.name.tooltip=Nazwa ciasteczka
 cookies.header.value.tooltip=Zawartość ciasteczka
+cookies.header.rawValue.tooltip=Zawartość ciasteczka
 cookies.header.domain.tooltip=Domena przechowująca ciasteczko
 cookies.header.size.tooltip=Wielkość ciasteczka
 cookies.header.path.tooltip=Ścieżka do ciasteczka
 cookies.header.expires.tooltip=Data wygaśnięcia ciasteczka
 cookies.header.security.tooltip=Wskazuje czy ciasteczko jest bezpieczne, czy nie
-cookies.header.status.tooltip=Status ciasteczka (zdegradowane, oznaczone…)
 cookies.header.httponly.tooltip=Wyświetla tylko jeśli ciasteczko jest ciasteczkiem HTTP
 # LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
 # Labels used in the Firebug's net panel. If there are any cookies associated with a network
@@ -257,6 +257,7 @@ cookies.edit.value.label=Zawartość:
 cookies.edit.secure.label=Bezpieczne ciasteczko
 cookies.edit.httponly.label=Tylko HTTP
 cookies.edit.session.label=Sesja
+cookies.edit.urlEncode.label=Zawartość URL kodowania
 # LOCALIZATION NOTE (cookies.console.Cookies, cookies.console.Filter_By_Cookies)
 # Label and tooltip for a toolbar button displayed on the Console panel. Used for filtering.
 cookies.console.Cookies=Ciasteczka
