--- a/extension/locale/ja-JP/cookies.properties
+++ b/extension/locale/ja-JP/cookies.properties
@@ -154,12 +154,12 @@ cookies.edit.invalidpath=Cookie のパスが不正です。
 # Column labels used in the cookie header.
 cookies.header.name=名前
 cookies.header.value=内容
+cookies.header.rawValue=生の値
 cookies.header.domain=ドメイン
 cookies.header.size=サイズ
 cookies.header.path=パス
 cookies.header.expires=有効期限
 cookies.header.security=セキュリティ
-cookies.header.status=ステータス
 cookies.header.httponly=HTTP限定
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
 # cookies.header.domain.tooltip, cookies.header.size.tooltip, cookies.header.path.tooltip,
@@ -168,12 +168,12 @@ cookies.header.httponly=HTTP限定
 # Column tooltips used in the cookie header.
 cookies.header.name.tooltip=Cookie の名前
 cookies.header.value.tooltip=Cookie に格納された値
+cookies.header.rawValue.tooltip=Cookie に格納された生の値
 cookies.header.domain.tooltip=Cookie の格納を行ったドメイン
 cookies.header.size.tooltip=格納された Cookie のサイズ
 cookies.header.path.tooltip=Cookie が有効になるディレクトリ
 cookies.header.expires.tooltip=Cookie が失効する日付
 cookies.header.security.tooltip=セキュア Cookie か否かを示します
-cookies.header.status.tooltip=Cookie のステータス (downgraded, flagged など)
 cookies.header.httponly.tooltip=Cookie が HTTP 限定 Cookie かどうかを示します
 # LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
 # Labels used in the Firebug's net panel. If there are any cookies associated with a network
@@ -257,6 +257,7 @@ cookies.edit.value.label=値:
 cookies.edit.secure.label=セキュア Cookie
 cookies.edit.httponly.label=HTTP Only
 cookies.edit.session.label=セッション
+cookies.edit.urlEncode.label=値を URL エンコード
 # LOCALIZATION NOTE (cookies.console.Cookies, cookies.console.Filter_By_Cookies)
 # Label and tooltip for a toolbar button displayed on the Console panel. Used for filtering.
 cookies.console.Cookies=Cookie
