--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -1622,3 +1622,12 @@ console.msg.nothing_to_output=(nothing to output)
 # LOCALIZATION NOTE (console.msg.nothing_to_output):
 # Used by the console panel if an empty string is passed into a Console API.
 console.msg.an_empty_string=(an empty string)
+
+# LOCALIZATION NOTE (cookies.legacy.firecookie_detected):
+# A message used when Firecookie is detected. This extension has been integrated with
+# Firebu and should not be installed together with Firebug 1.10+
+cookies.legacy.firecookie_detected=Firecookie add-on is detected. This add-on has been integrated with Firebug 1.10 by default. To avoid collision you need to uninstall Firecookie. \n\nUninstall the add-on now?
+
+# LOCALIZATION NOTE (cookies.legacy.restart_firefox):
+# A message used when Firecookie has been unistalled
+cookies.legacy.restart_firefox=You must restart Firefox to finish uninstalling the add-on.\n\nRestart Firefox now?
