Locale update: zh-TW

--- a/extension/locale/zh-TW/cookies.properties
+++ b/extension/locale/zh-TW/cookies.properties
@@ -154,12 +154,12 @@ cookies.edit.invalidpath=無效的 cookie 路徑。
 # cookies.header.security, cookies.header.status, cookies.header.httponly):
 cookies.header.name=名稱
 cookies.header.value=內容
+cookies.header.rawValue=原始數值
 cookies.header.domain=網域
 cookies.header.size=大小
 cookies.header.path=路徑
 cookies.header.expires=有效期限
 cookies.header.security=安全性
-cookies.header.status=狀態
 cookies.header.httponly=HTTP 專用
 # Column labels used in the cookie header.
 # LOCALIZATION NOTE (cookies.header.name.tooltip, cookies.header.value.tooltip,
@@ -168,12 +168,12 @@ cookies.header.httponly=HTTP 專用
 # cookies.header.status.tooltip, cookies.header.httponly.tooltip):
 cookies.header.name.tooltip=cookie 名稱
 cookies.header.value.tooltip=cookie 保存的值
+cookies.header.rawValue.tooltip=cookie 保存的原始值
 cookies.header.domain.tooltip=保存此 cookie 的網域
 cookies.header.size.tooltip=cookie 的大小
 cookies.header.path.tooltip=cookie 的有效路徑
 cookies.header.expires.tooltip=cookie 的過期時間
 cookies.header.security.tooltip=顯示是否為 secure cookie
-cookies.header.status.tooltip=cookie 狀態（downgraded、flagged 等）
 cookies.header.httponly.tooltip=顯示 cookie 是否僅於 HTTP 有效
 # Column tooltips used in the cookie header.
 # LOCALIZATION NOTE (cookies.netinfo.Received_Cookies, cookies.netinfo.Sent_Cookies):
@@ -257,6 +257,7 @@ cookies.edit.value.label=內容：
 cookies.edit.secure.label=Secure Cookie
 cookies.edit.httponly.label=HTTP Only
 cookies.edit.session.label=Session
+cookies.edit.urlEncode.label=URL encode 值
 # cookies.edit.domain.label, cookies.edit.path.label, cookies.edit.expire.label,
 # cookies.edit.value.label, cookies.edit.secure.label, cookies.edit.httponly.label,
 cookies.console.Cookies=Cookies
